# aivoice

./: .gitignore  .replit  README.md  ai_module.py  aivoice.py  cli.py  config.py  gui.py  main.py  pyproject.toml  replit.nix  system_controls.py  voice_module.py  web_services.py
