[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "comtypes>=1.4.10",
    "pycaw>=20240210",
    "pyqt5>=5.15.11",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "screen-brightness-control>=0.24.2",
    "speechrecognition>=3.14.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "wikipedia>=1.4.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
